# mpv-plugins

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
config/: README.md  input.conf  mpv.conf
plugins/drag-zoom-box/: CMakeLists.txt  README.md
plugins/drag-zoom-box/include/drag_zoom_box/: logic.h
plugins/drag-zoom-box/lua-reference/: drag-zoom-box.lua
plugins/drag-zoom-box/src/: logic.cpp  plugin.cpp
plugins/drag-zoom-box/tests/: CMakeLists.txt  test_drag_zoom_box.cpp
plugins/enhanced-ab-loop/: CMakeLists.txt  README.md  SPEC.md  TESTING.md
plugins/enhanced-ab-loop/include/enhanced_ab_loop/: logic.h  store.h
plugins/enhanced-ab-loop/lua-reference/: enhanced-ab-loop.lua
plugins/enhanced-ab-loop/src/: logic.cpp  plugin.cpp  store.cpp
plugins/enhanced-ab-loop/tests/: CMakeLists.txt  test_logic.cpp  test_store.cpp
plugins/enhanced-drag/: CMakeLists.txt  README.md
plugins/enhanced-drag/include/enhanced_drag/: logic.h
plugins/enhanced-drag/lua/: enhanced-drag.lua
plugins/enhanced-drag/src/: logic.cpp  plugin.cpp
plugins/enhanced-drag/tests/: CMakeLists.txt  test_enhanced_drag.cpp
plugins/enhanced-rotation/: CMakeLists.txt  README.md
plugins/enhanced-rotation/include/enhanced_rotation/: logic.h
plugins/enhanced-rotation/lua/: enhanced-rotation.lua
plugins/enhanced-rotation/src/: logic.cpp  plugin.cpp
plugins/enhanced-rotation/tests/: CMakeLists.txt  test_enhanced_rotation.cpp
plugins/enhanced-seek/: CMakeLists.txt  README.md
plugins/enhanced-seek/include/enhanced_seek/: logic.h
plugins/enhanced-seek/lua-reference/: enhanced-seek.lua
plugins/enhanced-seek/src/: logic.cpp  plugin.cpp
plugins/enhanced-seek/tests/: CMakeLists.txt  test_enhanced_seek.cpp
plugins/enhanced-volume/: CMakeLists.txt  README.md
plugins/enhanced-volume/include/enhanced_volume/: logic.h
plugins/enhanced-volume/lua/: enhanced-volume.lua
plugins/enhanced-volume/src/: logic.cpp  plugin.cpp
plugins/enhanced-volume/tests/: CMakeLists.txt  test_enhanced_volume.cpp
plugins/tail-frame-extension/: README.md
plugins/tail-frame-extension/lua/: tail-frame-extension.lua
plugins/uosc/: README.md  uosc.conf
plugins/uosc/lua/: main.lua
plugins/uosc/lua/elements/: Timeline.lua
scripts/: collect-dist.sh
shared/cpp/: mpv_util.h
shared/lua/: plugin_config.lua
